# home-threat-lab

./: README.md
home-threat-lab/: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
home-threat-lab/.github/: CODEOWNERS
home-threat-lab/docs/: index.md  modules.md
home-threat-lab/home_threat_lab/data/: alert.json  inventory.json
home-threat-lab/home_threat_lab/htl_sensor/: alerts.py  capture.py  config.py  inventory.py  logging_config.py  packet_handler.py  rule_engine.py  sensor.py
home-threat-lab/home_threat_lab/htl_sensor/utils/: file_utils.py  rules.py  time_utils.py
home-threat-lab/tests/: test_foo.py
