[tool.poetry]
name = "home_threat_lab"
version = "0.0.1"
description = "A tool that passively monitors a small network, detects common threats, and explains them in plain language."
authors = ["Akash Joshi <akashjoshi2023@gmail.com>"]
repository = "https://github.com/HackChamp25/home-threat-lab"
documentation = "https://HackChamp25.github.io/home-threat-lab/"
readme = "README.md"
packages = [
  {include = "home_threat_lab"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
scapy = "^2.6.1"
sqlite-utils = "^3.38"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
deptry = "^0.16.2"
pyright = "^1.1.382"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pyright]
include = ["home_threat_lab"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
